# Raytracer-POO

./: .gitignore  CMakeLists.txt  CodeMap3.dgml  LICENSE.md  Raytracer.aps  Raytracer.sln  Raytracer.vcxproj  Raytracer.vcxproj.filters  resource.h
Debug/: AImage.sbr  AObject.sbr  AWindow.sbr  CalculUnit.sbr  Color.sbr  Cone.sbr  Cylinder.sbr  Eye.sbr  GraphicException.sbr  LightPhong.sbr  Plan.sbr  Ray.sbr  RayTracer.sbr  Raytracer.bsc  Raytracer.ilk  SDLGraphic.sbr  SDLImage.sbr  SDLWindow.sbr  Scene.sbr  Sphere.sbr  Spot.sbr  Vector2.sbr  Vector3.sbr  main.sbr  test_unit_vector.sbr  vc140.idb
Debug/Raytracer.tlog/: BscMake.command.1.tlog  BscMake.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Raytracer.lastbuildstate  bscmake.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
includes/: AImage.hpp  AObject.hpp  AWindow.hpp  CalculUnit.hpp  Cone.hpp  Cylinder.hpp  Eye.hpp  IEffect.hpp  IGraphic.hpp  LightPhong.hpp  Plan.hpp  RayTracer.hpp  SDLGraphic.hpp  SDLImage.hpp  SDLWindow.hpp  Scene.hpp  Sphere.hpp  Vector2.hpp  Vector3.hpp
includes/Core/: CalculUnit.hpp  Color.hpp  Eye.hpp  Ray.hpp  RayTracer.hpp  RaycastHit.hpp  Scene.hpp  (+3 more)
sources/: AImage.cpp  AObject.cpp  AWindow.cpp  CalculUnit.cpp  Color.cpp  Cone.cpp  Cylinder.cpp  Eye.cpp  GraphicException.cpp  LightPhong.cpp  Plan.cpp  Ray.cpp  RayTracer.cpp  SDLGraphic.cpp  SDLImage.cpp  SDLWindow.cpp  Scene.cpp  Sphere.cpp  Spot.cpp  Vector2.cpp  Vector3.cpp  main.cpp
test/: test_refracted.cpp  test_unit_vector.cpp
(+53 files in other folders)
